# khiopsdriver-s3

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  gcsplugin.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml  pack-conda.yml  pack-debian.yml
.github/workflows/properties/: hosted-ninja-vcpkg_submod.properties.json
cmake/modules/: CodeCoverage.cmake
conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: dlib_export.h  drivertest.cpp  gcptest.cpp  gcsplugin.cpp  gcsplugin.h  gcsplugin2.cpp  ini.h  khiopsplugintest.cpp  libraryloader.cpp  libraryloader.h  main.cpp  maintest.cpp  s3plugin.cpp  s3plugin.h  s3plugin_internal.h  version.h
src/contrib/: ini.h  matching.h
test/: .clang-format  CMakeLists.txt  basic_test.cpp  drivertest.cpp  path_helper.cpp  path_helper.h  plugin_test.cpp
vcpkg_overlay/aws-c-auth/: portfile.cmake
vcpkg_overlay/aws-c-cal/: portfile.cmake
vcpkg_overlay/aws-c-common/: portfile.cmake
vcpkg_overlay/aws-c-compression/: portfile.cmake
vcpkg_overlay/aws-c-event-stream/: portfile.cmake
vcpkg_overlay/aws-c-http/: portfile.cmake
vcpkg_overlay/aws-c-mqtt/: portfile.cmake
vcpkg_overlay/aws-c-sdkutils/: portfile.cmake
vcpkg_overlay/aws-checksums/: portfile.cmake
vcpkg_overlay/aws-crt-cpp/: portfile.cmake
vcpkg_overlay/aws-sdk-cpp/: portfile.cmake  vcpkg.in.json  vcpkg.json
